# gaia

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md  gaia.natvis
data/shaders/: BasicPixel.hlsl  BasicVertex.hlsl  DebugPixel.hlsl  DebugVertex.hlsl  GenerateMips.hlsl  SkyboxPixel.hlsl  SkyboxVertex.hlsl  TerrainComputeNormals.hlsl  TerrainDomain.hlsl  TerrainHull.hlsl  TerrainPixel.hlsl  TerrainShadowDomain.hlsl  TerrainVertex.hlsl  WaterPixel.hlsl  WaterVertex.hlsl  pixel.hlsl  vertex.hlsl
data/textures/: aerial_grass_rock_diff_4k.dds  aerial_grass_rock_nor_dx_2k.dds  ground_grey_diff_4k.dds  ground_grey_nor_dx_2k.dds  skymap.dds
src/: Camera.cpp  Camera.hpp  CommandQueue.cpp  CommandQueue.hpp  DebugDraw.cpp  GaiaDefs.hpp  GaiaMath.hpp  GaiaTestbedApp.cpp  GaiaTestbedApp.hpp  GaiaUtils.hpp  GenerateMips.cpp  Input.cpp  Input.hpp  Renderer.cpp  Renderer.hpp  Skybox.cpp  Skybox.hpp  Terrain.cpp  Terrain.hpp  Timer.cpp  main.cpp  pch.hpp
src/gaia/: BasicShader.cpp  BasicShader.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CommandQueue.cpp  DebugDraw.cpp  DebugDraw.hpp  File.cpp  File.hpp  GaiaDefs.hpp  GaiaGfxTypes.hpp  GaiaMath.hpp  GaiaUtils.hpp  GenerateMips.cpp  GenerateMips.hpp  MappedConstantBuffer.hpp  Renderer.cpp  Renderer.hpp  Skybox.cpp  Skybox.hpp  Span.hpp  StaticMesh.cpp  StaticMesh.hpp  Terrain.cpp  Terrain.hpp  TerrainComputeNormals.cpp  TerrainComputeNormals.hpp  TerrainConstants.hpp  TerrainErosion.cpp  TerrainErosion.hpp  Timer.hpp  UploadManager.cpp  UploadManager.hpp  pch.hpp
src/gaia/Math/: AABB.hpp  GaiaMath.hpp  Plane.hpp  Ray.hpp
src/gaia_testbed/: CMakeLists.txt  GaiaTestbedApp.cpp  GaiaTestbedApp.hpp  main.cpp
src/stb_perlin/: CMakeLists.txt
